Add support for team formation
