# internal/model/batch.go
@@ -8,18 +8,19 @@ import (
 
 type Batch struct {
 	gorm.Model
-	Name  string `gorm:"unique;not null"`
-	Quota string
+	Name    string `gorm:"unique;not null"`
+	Quota   string
+	MinCGPA float32
+	MinCH   uint8 `gorm:"not null"`
 
-	TeamRegDeadline time.Time // TeamRegDeadline is the cutoff date/time by which team registration must be completed.
-	MaxTeamMember   uint8     // MaxTeamMember defines the maximum number of members allowed in a team.
-	MaxTeacherPref  uint8     // MaxTeacherPref indicates the maximum number of teacher selections that a team can list as preferences.
-
-	PreDefenceAt time.Time
-	DefenceAt    time.Time
+	TeamRegDeadline time.Time `gorm:"not null"`
+	MaxTeamMember   uint8     `gorm:"not null"`
+	MaxTeacherPref  uint8     `gorm:"not null"`
+	PreDefenceAt    time.Time `gorm:"not null"`
+	DefenceAt       time.Time `gorm:"not null"`
 
 	CreatedByID uint  `gorm:"not null"`
-	CreatedBy   *User `gorm:"foreignKey:CreatedByID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL"`
+	CreatedBy   *User `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL"`
 }
 
 func (b *Batch) TableName() string {
@@ -32,6 +33,8 @@ func (b *Batch) convertToMinimalApiFormat() *v1.BatchInfo {
 		Name:  b.Name,
 		Quota: b.Quota,
 
+		MinCGPARequired: b.MinCGPA,
+		MinCHRequired:   b.MinCH,
 		TeamRegDeadline: b.TeamRegDeadline,
 		MaxTeamMember:   b.MaxTeamMember,
 		MaxTeacherPref:  b.MaxTeacherPref,
@@ -50,4 +53,37 @@ func (b *Batch) ConvertToApiFormat() *v1.BatchInfo {
 	}
 
 	return resp
+}
+
+func (b *Batch) VerifyBeforeUpsert() error {
+	if b.TeamRegDeadline.After(b.PreDefenceAt) {
+		return v1.ErrInvalidTeamRegDeadline
+	}
+	if b.PreDefenceAt.After(b.DefenceAt) {
+		return v1.ErrInvalidPreDefenceDate
+	}
+	return nil
+}
+
+type BatchStage uint8
+
+const (
+	StageTeamRegistration BatchStage = iota + 1
+	StagePreDefence
+	StageDefence
+	StageResult
+)
+
+func (b *Batch) GetCurrentStage() BatchStage {
+	now := time.Now()
+	switch {
+	case now.Before(b.TeamRegDeadline):
+		return StageTeamRegistration
+	case now.Before(b.PreDefenceAt):
+		return StagePreDefence
+	case now.Before(b.DefenceAt):
+		return StageDefence
+	default:
+		return StageResult
+	}
 }
